dev/manifests/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-operators-redhat
